# LaneDetectionOpenCV

./: Jenkinsfile  README.md  pubspec.yaml
.github/workflows/: flutter-ci.yml
android/: CMakeLists.txt  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: opencv.cpp
android/app/src/main/kotlin/com/example/lanedetectionopencv/: BoundingBox.kt  Constants.kt  DetectionActivity.kt  Detector.kt  FatigueDetectionActivity.kt  LaneDetectionActivity.kt  MainActivity.kt  OverlayView.kt  SettingsActivity.kt  StartActivity.kt
android/app/src/main/res/drawable/: ic_settings.xml
android/app/src/main/res/layout/: activity_detection.xml  activity_fatigue_detection.xml  activity_lane_detection.xml  activity_main.xml  activity_start.xml
lib/: main.dart
opencv/: opencv.cpp
test/: widget_test.dart
